# PREDATOR

./: README.md  install.sh  pyproject.toml
predator/: __init__.py  __main__.py  entry.py
predator/agents/: __init__.py  attack_chain.py  escalation_loop.py  hacker_brain.py  lanes.py  loop_detection.py  runtime.py  subagent.py  tool_executor.py  vuln_discovery.py  workspace.py
predator/channels/: discord.py  irc_channel.py  matrix_channel.py  registry.py  router.py  service.py  session_key.py  signal_channel.py  slack_channel.py  telegram.py  types.py  whatsapp.py
predator/cli/: __init__.py  program.py  theme.py
predator/config/: __init__.py  defaults.py  env.py  loader.py  paths.py  schema.py
predator/cron/: schedule.py  service.py  types.py
predator/daemon/: service.py
predator/gateway/: __init__.py  auth.py  client.py  protocol.py  rate_limit.py  server.py
predator/heartbeat/: runner.py
predator/hooks/: __init__.py  events.py  frontmatter.py  loader.py  runner.py  types.py
predator/memory/: __init__.py  manager.py  store.py
predator/plugins/: __init__.py  discovery.py  loader.py  manifest.py  registry.py  sdk.py  types.py
predator/process/: __init__.py  executor.py  registry.py  supervisor.py
predator/providers/: __init__.py  anthropic.py  base.py  ollama.py  openai.py  openrouter.py  router.py
predator/services/: orchestrator.py
predator/sessions/: __init__.py  compaction.py  policy.py  transcript.py
predator/skills/: __init__.py  loader.py
predator/tools/: __init__.py  auto_installer.py  base.py  bash.py  file_ops.py  registry.py  web.py
predator/utils/: __init__.py  crypto.py  logger.py  net.py  platform.py
skills/domain-enum/: SKILL.md
skills/forensic-analysis/: SKILL.md
skills/log-analysis/: SKILL.md
skills/network-scan/: SKILL.md
skills/osint-recon/: SKILL.md
skills/password-audit/: SKILL.md
skills/social-hunt/: SKILL.md
skills/vuln-assess/: SKILL.md
skills/web-app-scan/: SKILL.md
templates/: AGENTS.md  BOOT.md  BOOTSTRAP.md  HEARTBEAT.md  IDENTITY.md  SOUL.md  TOOLS.md  USER.md
tests/: test_orchestration.py
(+48 files in other folders)
