[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "predator"
version = "1.0.0"
description = "PREDATOR — Autonomous AI Agent Framework for Ethical Hackers & Cybersecurity Professionals"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "PREDATOR Team" }]
keywords = ["osint", "pentesting", "cybersecurity", "ai-agent", "ethical-hacking", "kali-linux"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Networking",
]

dependencies = [
    # CLI
    "click>=8.1.0",
    "rich>=13.0.0",
    # WebSocket & HTTP
    "websockets>=13.0",
    "aiohttp>=3.9.0",
    "aiofiles>=24.0",
    # Config & Validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0",
    # LLM Providers
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    # Process & PTY
    "pexpect>=4.9.0",
    # Async
    "anyio>=4.0.0",
    # Crypto
    "cryptography>=42.0.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "platformdirs>=4.0.0",
    "jinja2>=3.1.0",
    "httpx>=0.27.0",
    # Interactive prompts (arrow key selection)
    "InquirerPy>=0.3.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[project.scripts]
predator = "predator.entry:main"

[tool.hatch.build.targets.wheel]
packages = ["predator"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
